--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "/",
+  "homepage": "https://tech-tonic-frontend.onrender.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
